# engawa-wgpu

./: .gitignore  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
.github/workflows/: auto-release.yml
effects/: aurora.tlisp  bloom.tlisp  colorblind.tlisp  crt.tlisp  glow_on_bell.tlisp  grain.tlisp  scanlines.tlisp  snow.tlisp  window_depth.tlisp
src/: dispatcher.rs  lib.rs  pipeline.rs  pool.rs
src/catalog/: aurora.rs  bloom.rs  colorblind.rs  crt.rs  glow_on_bell.rs  grain.rs  mod.rs  scanlines.rs  snow.rs  window_depth.rs
src/catalog/wgsl/: aurora.wgsl  bloom_blur_h.wgsl  bloom_blur_v.wgsl  bloom_composite.wgsl  bloom_threshold.wgsl  colorblind.wgsl  crt.wgsl  glow_on_bell.wgsl  grain.wgsl  scanlines.wgsl  snow.wgsl  window_depth.wgsl
tests/: catalog_gpu.rs  catalog_matrix.rs  red_tint.rs
